[gd_scene load_steps=5 format=3 uid="uid://ctfpmsdyjexo3"]

[ext_resource type="Script" uid="uid://bayht7jc2f6cy" path="res://Scripts/01_main_menu.gd" id="1_cn4ak"]
[ext_resource type="Script" uid="uid://dqn511rcm17ae" path="res://Scripts/00_animated_menu.gd" id="1_l5ke1"]
[ext_resource type="Texture2D" uid="uid://dhv482p6tcvp3" path="res://Assets/Menu Screen Frame 1.png" id="1_vga14"]
[ext_resource type="FontFile" uid="uid://dgrnxjw2gm3le" path="res://Assets/Fonts/PixelifySans-VariableFont_wght.ttf" id="4_cdl8y"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cn4ak")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("1_vga14")
script = ExtResource("1_l5ke1")

[node name="Timer" type="Timer" parent="TextureRect"]
wait_time = 0.5
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 325.0
offset_right = 960.0
offset_bottom = 540.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="Play_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_cdl8y")
theme_override_font_sizes/font_size = 30
text = "PLAY"

[node name="Options_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_cdl8y")
theme_override_font_sizes/font_size = 30
text = "OPTIONS"

[node name="Exit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_cdl8y")
theme_override_font_sizes/font_size = 30
text = "EXIT"

[connection signal="timeout" from="TextureRect/Timer" to="TextureRect" method="_on_timer_timeout"]
